# RedeNeural

./: .gitignore  CMakeLists.txt  CMakePresets.json
RedeNeural/: CMakeLists.txt  Matrix_Benchmark.cpp  RedeNeural.cpp  teste.cu
RedeNeural/Include/Artificial_Neural_Network/: Layer.h
RedeNeural/Include/Matrix/: Matrix.h  ProcessingType.h  TensorComputeCore.h
RedeNeural/Include/Matriz/: Matriz.h
RedeNeural/Src/Artificial_Neural_Network/: Layer.cpp
RedeNeural/Src/Matrix/: Matrix.cpp  TensorComputeCore.cpp  TensorComputeCore.cu
RedeNeural/Src/Matriz/: Matriz.cpp  Multiplicao_Matriz.cpp
